[gd_scene load_steps=4 format=3 uid="uid://b06xrkgbe8rdv"]

[ext_resource type="Script" path="res://ui/message/message.gd" id="1_58qdy"]
[ext_resource type="Texture2D" uid="uid://dr7ohmh3yc0nt" path="res://ui/icons/exclamation_mark.svg" id="2_aixjt"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n1a0p"]
content_margin_left = 4.0
content_margin_right = 4.0
bg_color = Color(0.705882, 0.321569, 0.321569, 1)

[node name="Message" type="PanelContainer"]
offset_right = 94.0
offset_bottom = 109.0
theme_type_variation = &"PopupPanelContainer"
script = ExtResource("1_58qdy")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="TitlePanelCtnr" type="PanelContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_n1a0p")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/TitlePanelCtnr"]
layout_mode = 2

[node name="Icon" type="TextureRect" parent="VBoxContainer/TitlePanelCtnr/HBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 16)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_aixjt")
expand_mode = 3
stretch_mode = 4

[node name="Title" type="Label" parent="VBoxContainer/TitlePanelCtnr/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Lorem"

[node name="Description" type="RichTextLabel" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
bbcode_enabled = true
text = "Ipsum"
fit_content = true

[node name="TimeoutBar" type="ProgressBar" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
value = 50.0
show_percentage = false

[node name="DismissBtn" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Dismiss"

[node name="Timer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 10.0
one_shot = true
autostart = true
